--- a/Learning HTML/session2.html
+++ b/Learning HTML/session2.html
@@ -34,7 +34,7 @@
         Block Elements (takes up entire block): p
      -->
     <a href="https://www.youtube.com/">Youtube</a>
-    <a href="intro.html">Intro</a>
+    <a href="session1.html">Session 1</a>
     <a href="HTMLBasicsExercise/cougars.html">Couger</a>
 
     <!-- creating a block just to test the jump to id -->
