--- a/Learning CSS/basics.html
+++ b/Learning CSS/basics.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- needed for external CSS, rel stands for relationship -->
-  <link rel="stylesheet" href="starterCode.css"/>
+  <link rel="stylesheet" href="basics.css"/>
   <!-- can be used for multiple files, just needs to be linked to them -->
   <!-- internal CSS, used in head (holds metadata) -->
   <!-- <style>
