--- a/Learning CSS/styling.html
+++ b/Learning CSS/styling.html
@@ -6,8 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- needed for external CSS, rel stands for relationship -->
-  <link rel="stylesheet" href="colours.css"/>
-  <title>CSS Basics</title>
+  <link rel="stylesheet" href="styling.css"/>
+
+  <!-- for the Montserrat font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
+
+
+  <title>CSS Styling Basics</title>
 </head>
 
 <body>
