--- a/Learning CSS/stylingTwo.html
+++ b/Learning CSS/stylingTwo.html
@@ -52,12 +52,12 @@
     <li>Jeffrey Jones <span>Emperor Joseph II</span></li>
   </ul>
   <hr />
-  <h2>User Reviews</h2>
+  <h2 id="reviews">User Reviews</h2>
   <div>
-    <span>Featured Review</span>
+    <span id="featured">Featured Review</span>
     <h3>A Genius Movie About A Genius</h3>
     <h4>10/10</h4>
-    <p>
+    <p class="posts">
       I thought that it would be impossible to make a movie like this one!
       Peter Schaffer's original play inspired Milos Forman, the great czech
       film maker, that surprised the world with "One flew over the cuckoo's
@@ -73,7 +73,7 @@
   <div>
     <h3>True Gem For Music Fans</h3>
     <h4>9.5/10</h4>
-    <p>
+    <p class="posts">
       I'd like to point out a few facts before I review the movie. First of
       all, Mozart died at home surrounded by his family, pupil and a priest.
       Secondly, the plot of Amadeus is not exactly original. Rimsky-Korsakov
