--- a/Learning CSS/LeafySeadragonExercise/leafy.html
+++ b/Learning CSS/LeafySeadragonExercise/leafy.html
@@ -20,7 +20,7 @@
     <h2>Description</h2>
     <p>Much like the <a href="https://en.wikipedia.org/wiki/Seahorse">seahorse</a>, the leafy seadragon's name is
         derived from its resemblance to another creature (in this case, the mythical dragon). While not large, they are
-        slightly larger than most seahorses, growing to about 20–24 cm (8–9.5 in). They feed on <a
+        slightly larger than most seahorses, growing to about 20-24 cm (8-9.5 in). They feed on <a
             href="https://en.wikipedia.org/wiki/Plankton">plankton</a> and small <a
             href="https://en.wikipedia.org/wiki/Crustacean">crustaceans</a>.</p>
 
