--- a/Learning CSS/stylingThree.html
+++ b/Learning CSS/stylingThree.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Amadeus</h1>
+    <h1 id="firstHead">Amadeus</h1>
     <div>
         <a class="tag" href="/drama">Drama</a>, <a class="tag" href="/music">Music</a>,
         <a class="tag" href="http://www.google.com">History</a>
@@ -132,6 +132,16 @@
         <label for="permission">I give you permission to use my rating: </label>
         <input type="checkbox" id="permission">
         <button>Submit</button>
+    </div>
+
+    <div id="border">
+        <h1>First Heading</h1>
+        <h2>Second Heading</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nobis tempora voluptatum similique iste delectus enim earum recusandae. Voluptatum quisquam debitis commodi alias nulla magni dolorum architecto vel culpa corporis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione at <span>exercitationem</span> neque iure tempore placeat voluptas consectetur facilis! Velit iusto expedita omnis similique reprehenderit ab harum perspiciatis repellat excepturi mollitia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, minima ex. Velit dolores, ab impedit tenetur sit, officia consectetur quas debitis exercitationem tempora minus! Consequatur veniam quas nobis corrupti quidem?</p>
+        </div>
+        <div class="imagesMaybe"></div>
+        <div class="imagesMaybe"></div>
     </div>
 </body>
 
