--- a/Learning CSS/stylingThree.html
+++ b/Learning CSS/stylingThree.html
@@ -143,6 +143,9 @@
         <div class="imagesMaybe"></div>
         <div class="imagesMaybe"></div>
     </div>
+    <div id="box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, explicabo accusamus doloribus ratione nobis porro labore exercitationem, quaerat aliquid dignissimos sed fugit consequatur delectus. In quam nulla quos aperiam saepe.</p>
+    </div>
 </body>
 
 </html>
