--- a/ArtistPortfolioProject/index.html
+++ b/ArtistPortfolioProject/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Indie+Flower&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="app.css"/>
     <title>JSCeramics</title>
 </head>
 <body>
-    <h1>HELLO!</h1>
+    <h1>Joseph Shmoe</h1>
 </body>
 </html>
