--- a/Projects/HazelCVProject/index.html
+++ b/Projects/HazelCVProject/index.html
@@ -22,26 +22,69 @@
             <p>Hazel</p>
             <a href="#contact" class="contact">Contact Me</a>
         </header>
-        <div class="heroContent">
+        <div class="content">
             <h1 class="tagline">I'm a <em>Scientist</em> and <em>Speaker</em> who is interested in the psychollgy of greed.</h1>
             <div class="twoCols">
                 <p class="half">My Mission</p>
                 <p class="half">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium soluta odio sed eius vitae? Vel, ullam! Commodi, vitae ut? Error pariatur sint nam explicabo nulla unde eum reiciendis reprehenderit earum.</p>
                 <p class="half">Specialites</p>
-                <div class="half">
-                    <ul>
+                    <ul class="half skills">
                         <li>Public Speaking</li>
                         <li>Data Analytics</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Strategic Planning</li>
+                        <li>User Interviews</li>
+                        <li>Writing and Editing</li>
+                        <li>Analytics & Data</li>
+                        <li>Font-End Dev</li>
+                        <li>Programming</li>
                     </ul>
-                </div>
-                <p>My Mission</p>
             </div>
         </div>
     </section>
+    <section class="blog">
+        <div class="content">
+            <div class="twoCols">
+                <p class="half">Tech Blog</p>
+                <div class="half">
+                    <h2 class="title" id="first">This is Your Brain on Helium</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veniam ex, nisi dolorem numquam quae facilis dolor sequi dolore minima suscipit debitis quod, reiciendis pariatur fuga, natus sint perspiciatis quos.</p>
+                    <h3 class="date">May 19 2025</h3>
+                    <h2 class="title">In Search of Intelligence</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veniam ex, nisi dolorem numquam quae facilis dolor sequi dolore minima suscipit debitis quod, reiciendis pariatur fuga, natus sint perspiciatis quos.</p>
+                    <h3 class="date">June 17, 2025</h3>
+                    <h2 class="title">Should Public Transit Be Free?</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veniam ex, nisi dolorem numquam quae facilis dolor sequi dolore minima suscipit debitis quod, reiciendis pariatur fuga, natus sint perspiciatis quos.</p>
+                    <h3 class="date">March 10 2025</h3>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="events">
+        <div class="content">
+            <div class="twoCols">
+                <p class="half">Speaking Events</p>
+                <div class="half">
+                    <h2 class="eventTitle" id="first">NY Economics Forum</h2>
+                    <p class="city">New York, NY</p>
+                    <h3 class="date">August 20th 2025, 7:00pm</h3>
+                    <h2 class="eventTitle">Emerging Tech Meet-Up</h2>
+                    <p class="city">San Francisco, CA</p>
+                    <h3 class="date">July 19th 2025, 2:00pm</h3>
+                    <h2 class="eventTitle">Creative Code Meetup</h2>
+                    <p class="city">Denver, CO</p>
+                    <h3 class="date">September 29th 2025, 6:00pm</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footerContent">
+            <img src="images/instagram.png" alt="instagram">
+            
+            <img src="images/twitter.png" alt="twitter">
+            <p>Made With 🤍</p>
+        </div>
+    </footer>
 </body>
 </html>
