--- a/Learning CSS/Positioning/positioning.html
+++ b/Learning CSS/Positioning/positioning.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="positioning.css">
     <title>Positioning</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nam, sunt culpa ex veritatis architecto quia sapiente pariatur nesciunt magnam recusandae dicta nobis numquam ipsa sed qui molestiae asperiores id?</p>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nam, sunt culpa ex veritatis architecto quia sapiente pariatur nesciunt magnam recusandae dicta nobis numquam ipsa sed qui molestiae asperiores id?</p>
     <p id="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nam, sunt culpa ex veritatis architecto quia sapiente pariatur nesciunt magnam recusandae dicta nobis numquam ipsa sed qui molestiae asperiores id?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nam, sunt culpa ex veritatis architecto quia sapiente pariatur nesciunt magnam recusandae dicta nobis numquam ipsa sed qui molestiae asperiores id?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nam, sunt culpa ex veritatis architecto quia sapiente pariatur nesciunt magnam recusandae dicta nobis numquam ipsa sed qui molestiae asperiores id?</p> -->
+    <h1>Positioning</h1>
+    <div class="box">
+        <span>Hi!</span>
+        <p>Fix it</p>
+    </div>
+    <div class="buttonBody">
+        <a href="#messages" class="btn"> Messages
+            <span class="badge">3</span>
+        </a>
+    </div>
 </body>
 </html>
